test/scc/expr/semantic-errors/134.a
134.t:3:16: error: field name not in record or union initializer